--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Git</title>
 </head>
 <body>
-    <p>GitHub連携</p>
+
+    <H1>GitHub連携</H1>
+    <p>GitHubとSourcetree</p>
+    
+    
 </body>
 </html>
