Eclipseで編集追加

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <H1>GitHub連携</H1>
     <p>GitHubとSourcetree</p>
 
-    <p>Eclipseで編集追加</p>
+    <p>Eclipseで編集追加1</p>
+    <p>Eclipseで編集追加2</p>
 
 </body>
 </html>
