--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <H1>GitHub連携</H1>
     <p>GitHubとSourcetree</p>
 
-    <p>Eclipseで編集追加1</p>
-    <p>Eclipseで編集追加2</p>
-    <p>Eclipseで編集追加3</p>
+    <p>Eclipseで編集</p>
+
 
 </body>
 </html>
